FIX flex-wrap to collection page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,6 +196,15 @@ input[type=submit]:hover {
         margin-right: 0px;
         font-size: 100%;
     }
+
+    .collection-first {
+        margin: 15px;
+        flex-wrap: wrap;
+    }
+
+    .kits {
+        margin: 20px;
+    }
 }
 
 @media screen and (max-width: 800px) {
